hphp/test/slow/parser/empty-files/empty-invalid.php.expectf
Fatal error: A semicolon (';') is expected here. in %s/test/slow/parser/empty-files/empty-invalid.php on line 2